# QtServer

./: .gitignore  CMakeLists.txt  server.json
gtest/: gtest.cc  gtest_ioserver.cc  gtest_ioserver.h
include/: connection.h  ioserver.h  message.h  sockio.h
src/: README.md  connection.cc  ioserver.cc  main.cc  message.cc  sockio.cc
